modules/cli/src/test/resources/bad/wfchoice/gdo/params/Test01.scr
module bad.wfchoice.gdo.params.Test01;


global protocol Foo<sig M1>(role A, role B)
{
	choice at A
	{
		M1 from A to B;
		1() from A to B;
	}
	or
	{
		do Bar<M1>(A, B);
		2() from A to B;
	}
}


aux global protocol Bar<sig M2>(role C, role D)
{
	M2 from C to D;
}

